Added v0.1.2 update, changed notifier to com.github.timecraft.notifier

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,12 @@
-notifier (0.1.9) precise; urgency=low
+com.github.timecraft.notifier (0.1.2) precise; urgency=low
+
+  * Reminders frequency supports.
+  * Minor UI changes.
+  *Icon change.
+
+ -- Timecraft <timemaster23x@gmail.com>  Fri, 21 Apr 2018 17:27:00 -0500
+
+com.github.timecraft.notifier (0.1.0) precise; urgency=low
 
   * Source Release.
 
